--- a/src/features/Tickets/components/Ticket/Ticket.module.scss
+++ b/src/features/Tickets/components/Ticket/Ticket.module.scss
@@ -1,6 +1,11 @@
 .top {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
+    padding-right: 12%;
+    img {
+        display: block;
+    }
 }
 
 .price {
