wip, added date-fns, preloader, error layer, react spring

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,7 +1,11 @@
 .container {
-    display: flex;
     max-width: 1000px;
     margin: 0 auto;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
 }
 
 .filters {
