--- a/src/ui/Button/Button.module.scss
+++ b/src/ui/Button/Button.module.scss
@@ -8,6 +8,11 @@
     cursor: pointer;
     background: white;
     border-radius: 5px;
+    transition: all 0.3s ease;
+    &:hover {
+        background: #2196f3;
+        color: #fff;
+    }
     &:global(.active) {
         color: #fff;
         background: #2196f3;
@@ -15,8 +20,10 @@
     }
     &:focus {
         outline: none;
+        background: #2196f3;
     }
     &:active {
         outline: none;
+        background: #2196f3;
     }
 }
