--- a/src/ui/Checkbox/Checkbox.module.scss
+++ b/src/ui/Checkbox/Checkbox.module.scss
@@ -1,48 +1,67 @@
 .label {
-    display: block;
+    display: flex;
     position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
+    color: #4a4a4a;
+    padding: 10px 20px 10px 50px;
     cursor: pointer;
-    font-size: 22px;
+    font-size: 13px;
+    line-height: 20px;
     user-select: none;
+    align-items: center;
+    transition: all 0.3s ease;
+    &:hover {
+        background-color: #f1fcff;
+    }
+    &:focus {
+        background: #9abbce;
+        outline: none;
+    }
     input {
         position: absolute;
         opacity: 0;
         cursor: pointer;
         height: 0;
         width: 0;
-    }
-    &:hover input ~ .checkmark {
-        background-color: #ccc;
+        &:focus {
+            background: #9abbce;
+            outline: none;
+        }
     }
     input:checked ~ .checkmark:after {
-        display: block;
+        opacity: 1;
+    }
+    input:checked ~ .checkmark {
+        border-color: #2196f3;
     }
     .checkmark:after {
-        left: 9px;
-        top: 5px;
+        left: 7px;
+        top: 3px;
         width: 5px;
         height: 10px;
-        border: solid white;
-        border-width: 0 3px 3px 0;
+        border: solid #2196f3;
+        border-width: 0 2px 2px 0;
         -webkit-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
         transform: rotate(45deg);
+        opacity: 0;
     }
 }
 
 .checkmark {
     position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 20px;
+    height: 20px;
+    width: 20px;
+    border: 1px solid #9abbce;
+    border-radius: 2px;
+    transition: all 0.1s ease;
 }
 
 .checkmark:after {
     content: '';
     position: absolute;
-    display: none;
+    opacity: 0;
+    transition: all 0.1s ease;
 }
