--- a/src/features/Tickets/components/Ticket/Ticket.module.scss
+++ b/src/features/Tickets/components/Ticket/Ticket.module.scss
@@ -10,9 +10,8 @@
 
 .price {
     font-size: 24px;
-    line-height: 1;
     font-weight: 600;
-    color: #2196f3;
+    color: var(--main);
 }
 
 .container {
