--- a/src/features/Tickets/components/Ticket/components/Segment/Segment.module.scss
+++ b/src/features/Tickets/components/Ticket/components/Segment/Segment.module.scss
@@ -1,12 +1,15 @@
 .container {
     display: flex;
     justify-content: space-between;
+    & + & {
+        margin-top: 10px;
+    }
 }
 
 .label {
     font-size: 12px;
     line-height: 18px;
-    color: #a0b0b9;
+    color: var(--secondary);
     text-transform: uppercase;
 }
 
@@ -14,4 +17,18 @@
     display: flex;
     flex-direction: column;
     flex-basis: 33%;
+}
+
+.stop {
+    position: relative;
+    & + & {
+        padding-left: 12px;
+        &:before {
+            content: '-';
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 4px;
+        }
+    }
 }
