--- a/src/ui/Button/Button.module.scss
+++ b/src/ui/Button/Button.module.scss
@@ -1,7 +1,7 @@
 .button {
-    color: black;
+    color: var(--text);
     text-transform: uppercase;
-    border: 1px solid #dfe5ec;
+    border: 1px solid transparent;
     padding: 15px;
     width: 100%;
     display: block;
@@ -10,20 +10,20 @@
     border-radius: 5px;
     transition: all 0.3s ease;
     &:hover {
-        background: #2196f3;
+        background: var(--main);
         color: #fff;
     }
     &:global(.active) {
         color: #fff;
-        background: #2196f3;
-        border: 1px solid #2196f3;
+        background: var(--main);
+        border: 1px solid var(--main);
     }
     &:focus {
         outline: none;
-        background: #2196f3;
+        background: var(--main);
     }
     &:active {
         outline: none;
-        background: #2196f3;
+        background: var(--main);
     }
 }
