--- a/src/ui/Card/Card.module.scss
+++ b/src/ui/Card/Card.module.scss
@@ -4,7 +4,7 @@
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     margin-bottom: 20px;
-    color: #4a4a4a;
+    color: var(--text);
     &:global(.no-padding) {
         padding: 20px 0;
         .title {
