--- a/src/ui/Checkbox/Checkbox.module.scss
+++ b/src/ui/Checkbox/Checkbox.module.scss
@@ -1,7 +1,7 @@
 .label {
     display: flex;
     position: relative;
-    color: #4a4a4a;
+    color: var(--text);
     padding: 10px 20px 10px 50px;
     cursor: pointer;
     font-size: 13px;
@@ -10,10 +10,10 @@
     align-items: center;
     transition: all 0.3s ease;
     &:hover {
-        background-color: #f1fcff;
+        background-color: var(--hover);
     }
     &:focus {
-        background: #9abbce;
+        background: var(--hover);
         outline: none;
     }
     input {
@@ -22,23 +22,19 @@
         cursor: pointer;
         height: 0;
         width: 0;
-        &:focus {
-            background: #9abbce;
-            outline: none;
-        }
     }
     input:checked ~ .checkmark:after {
         opacity: 1;
     }
     input:checked ~ .checkmark {
-        border-color: #2196f3;
+        border-color: var(--main);
     }
     .checkmark:after {
         left: 7px;
         top: 3px;
         width: 5px;
         height: 10px;
-        border: solid #2196f3;
+        border: solid var(--main);
         border-width: 0 2px 2px 0;
         -webkit-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
