--- a/src/ui/Button/Button.module.scss
+++ b/src/ui/Button/Button.module.scss
@@ -1,7 +1,7 @@
 .button {
     color: var(--text);
     text-transform: uppercase;
-    border: 1px solid transparent;
+    border: 1px solid var(--border);
     padding: 15px;
     width: 100%;
     display: block;
