added focus styles

--- a/src/ui/Checkbox/Checkbox.module.scss
+++ b/src/ui/Checkbox/Checkbox.module.scss
@@ -12,9 +12,8 @@
     &:hover {
         background-color: var(--hover);
     }
-    &:focus {
+    &:focus-within {
         background: var(--hover);
-        outline: none;
     }
     input {
         position: absolute;
